<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edtCodigo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/codigo"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/txtTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/edtDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/edtCodigo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <ListView
        android:id="@+id/ltvMarca"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtDescripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <RadioGroup
        android:id="@+id/rgpTallas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ltvMarca"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <RadioButton
            android:id="@+id/rbtChica"
            android:text="@string/chica" />
        <RadioButton
            android:id="@+id/rbtMediana"
            android:text="@string/mediana" />
        <RadioButton
            android:id="@+id/rbtGrande"
            android:text="@string/grande" />
    </RadioGroup>

    <EditText
        android:id="@+id/edtCosto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/costo"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/rgpTallas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <EditText
        android:id="@+id/edtCantidad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/cantidad"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/edtCosto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/edtCantidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/ibtnAgregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:src="@android:drawable/ic_input_add" />

        <ImageButton
            android:id="@+id/ibtnMostrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:src="@android:drawable/ic_menu_view" />

        <ImageButton
            android:id="@+id/ibtnLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:src="@android:drawable/ic_menu_delete" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
